# DeveloperResearchAgent

./: README.md  gui.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
front-end/src/: App.css  App.jsx  index.css
src/: firecrawl.py  workflow.py
